# hotel-management-cpp

./: CMakeLists.txt  main.cpp
include/: Camera.h  Client.h  Hotel.h  Persoana.h  Receptioner.h  exceptions.h  utils.h
src/: Camera.cpp  Client.cpp  Hotel.cpp  Persoana.cpp  Receptioner.cpp  exceptions.cpp
